Fix header by adding z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,11 @@ body {
 header {
   background-color: #304557;
   width: 100%;
-  
   top: 0;
   left: 0;
   float: left;
   position: fixed;
+  z-index: 100;
   
 }
 
@@ -196,4 +196,15 @@ padding-top: 15px;
   margin-right: auto;
  }
 
+ .social_networks{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+ 
+footer{
+  background-color: red;
+}
   
